--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>CV Shop</title>
   <!-- Style -->
+  <!-- Bootstrap Icon -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
   <!-- Google Font -->
   <!-- Roboto font -->
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" /> -->
@@ -26,8 +28,6 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
-  <!-- Awesome JS -->
-  <script src="https://kit.fontawesome.com/1f5935dc7c.js"></script>
 </body>
 
 </html>
